--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
       </nav>
     </header>
     <!--Main Content-->
-    <main>Main Content</main>
+    <main>
+        <section id="hero"></section>
+    </main>
     <!--Footer-->
     <footer>
       <ul id="social-networks">
