--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         <h1 id="logo">Love Running</h1>
       </a>
       <input type="checkbox" id="nav-toggle" name="nav-toggle" />
-      <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+      <label for="nav-toggle" class="nav-toggle-label"
+        ><i class="fa-solid fa-bars"></i
+      ></label>
       <nav>
         <ul id="menu">
           <li><a href="index.html" class="active">Home</a></li>
@@ -54,12 +56,65 @@
     </header>
     <!--Main Content-->
     <main>
-        <section id="hero">
-            <div id="cover-text">
-                <h2>Love Running</h2>
-                <h3>Dublin Docklands and Phoenix Park</h3>
+      <section id="hero">
+        <div id="cover-text">
+          <h2>Love Running</h2>
+          <h3>Dublin Docklands and Phoenix Park</h3>
+        </div>
+      </section>
+      <!-- Reasons Section-->
+      <section id="reasons">
+        <h2>Why Love Running With Us?</h2>
+        <div id="benefits">
+          <div id="benefits-physical">
+            <div>
+              <h3>
+                Feel Healthy <i><i class="fa-solid fa-heart-pulse"></i></i>
+              </h3>
+              <hr />
+              <p>
+                Since it improves aerobic fitness, running is a great way to
+                help improve your cardiovascular health. Plus, it burns calories
+                and can build strength.
+              </p>
             </div>
-        </section>
+            <div>
+              <h3>
+                Feel Strong <i><i class="fa-solid fa-dumbbell"></i></i>
+              </h3>
+              <hr />
+              <p>
+                Running strengthens your heart by pumping blood more effectively
+                through your body.
+              </p>
+            </div>
+          </div>
+          <div id="benefits-mental">
+            <div>
+              <h3>
+                Feel Free <i><i class="fa-brands fa-fly"></i></i>
+              </h3>
+              <hr />
+              <p>
+                Physical exercise, running included, is known to release
+                endorphins in the brain. Endorphins make you more energetic,
+                more awake and, yes, happier.
+              </p>
+            </div>
+            <div>
+              <h3>
+                Feel Social <i><i class="fa-solid fa-globe"></i></i>
+              </h3>
+              <hr />
+              <p>
+                When we run with others, we can run farther and faster more
+                easily. Social running can pull you out of a running funk or low
+                mood, and inspire you to try new events.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!--Footer-->
     <footer>
@@ -70,27 +125,45 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our Facebook page (opens in a new tab)"
-            ><i class="fa-brands fa-facebook"></i></a
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.twitter.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Twitter page (opens in a new tab)"
           >
+            <i class="fa-brands fa-twitter-square"></i
+          ></a>
         </li>
         <li>
-            <a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                aria-label="Visit our Twitter page (opens in a new tab)">
-                <i class="fa-brands fa-twitter-square"></i></a>
+          <a
+            href="https://www.youtube.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our YouTube page (opens in a new tab)"
+          >
+            <i class="fa-brands fa-youtube-square"></i
+          ></a>
         </li>
         <li>
-            <a href="https://www.youtube.com/" target="_blank" rel="noopener"
-                aria-label="Visit our YouTube page (opens in a new tab)">
-                <i class="fa-brands fa-youtube-square"></i></a>
-        </li>
-        <li>
-            <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                aria-label="Visit our Instagram page (opens in a new tab)">
-                <i class="fa-brands fa-instagram"></i></a>
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Instagram page (opens in a new tab)"
+          >
+            <i class="fa-brands fa-instagram"></i
+          ></a>
         </li>
       </ul>
     </footer>
     <!-- Font Awesome Kit -->
-    <script src="https://kit.fontawesome.com/f66b72af47.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/f66b72af47.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
