--- a/index.html
+++ b/index.html
@@ -68,26 +68,26 @@
         <div id="benefits">
           <div id="benefits-physical">
             <div>
-              <h3>
-                Feel Healthy <i><i class="fa-solid fa-heart-pulse"></i></i>
-              </h3>
-              <hr />
-              <p>
-                Since it improves aerobic fitness, running is a great way to
-                help improve your cardiovascular health. Plus, it burns calories
-                and can build strength.
-              </p>
-            </div>
-            <div>
-              <h3>
-                Feel Strong <i><i class="fa-solid fa-dumbbell"></i></i>
-              </h3>
-              <hr />
-              <p>
-                Running strengthens your heart by pumping blood more effectively
-                through your body.
-              </p>
-            </div>
+                <h3>
+                  Feel Healthy <i><i class="fa-solid fa-heart-pulse"></i></i>
+                </h3>
+                <hr />
+                <p>
+                  Since it improves aerobic fitness, running is a great way to
+                  help improve your cardiovascular health. Plus, it burns calories
+                  and can build strength.
+                </p>
+              </div>
+              <div>
+                <h3>
+                  Feel Strong <i><i class="fa-solid fa-dumbbell"></i></i>
+                </h3>
+                <hr />
+                <p>
+                  Running strengthens your heart by pumping blood more effectively
+                  through your body.
+                </p>
+              </div>
           </div>
           <div id="benefits-mental">
             <div>
@@ -112,6 +112,10 @@
                 mood, and inspire you to try new events.
               </p>
             </div>
+
+          </div>
+          <div id="benefits-image">
+            <div id="circle-cover-bg"></div>
           </div>
         </div>
       </section>
